tests/ui/imports/extern-with-ambiguous-2.stderr
error[E0659]: `error` is ambiguous
  --> $DIR/extern-with-ambiguous-2.rs:13:5
   |
LL | use error::*;
   |     ^^^^^ ambiguous name
   |
   = note: ambiguous because of multiple glob imports of a name in the same module
note: `error` could refer to the module imported here
  --> $DIR/extern-with-ambiguous-2.rs:11:5
   |
LL | use s::*;
   |     ^^^^
   = help: consider adding an explicit import of `error` to disambiguate
note: `error` could also refer to the module imported here
  --> $DIR/extern-with-ambiguous-2.rs:12:5
   |
LL | use extern_with_ambiguous_2_extern::*;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: consider adding an explicit import of `error` to disambiguate

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0659`.
